sort monitoring results, include PRs from keycloak-benchmark